// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should call onChange callback 1`] = `
<RadioGroup
  default={null}
  errorText=""
  label=""
  onChange={[MockFunction]}
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
  >
    <div
      className="css-1vjh8yv "
    >
      <Placeholder
        placeholder=""
        visible={false}
      >
        <div
          className="css-oc0mp css-1jyyyen"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </Placeholder>
      <Label
        hasErrorMessage={false}
        htmlFor="none"
        isFloating={true}
        isFocused={false}
        label=""
      >
        <label
          className="css-1nn9zl4 css-16msjt6 css-1fekhao"
          htmlFor="none"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </label>
      </Label>
      <div
        className="css-zbxrv7"
      >
        <RadioItem
          active={false}
          key=".0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-1cqgl9p"
            htmlFor="foo0.30210713149961976"
          >
            <RadioUnchecked>
              <Icon
                className=""
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              checked={false}
              className="css-gyrv08"
              id="foo0.30210713149961976"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1wx4qok"
              params={Object {}}
              string="foo"
            >
              <span
                className="css-1wx4qok"
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
      <ErrorText
        className={null}
        errorText=""
      >
        <div
          className="css-hmgfge"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </ErrorText>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should have on active at a time 1`] = `
<RadioGroup
  default={null}
  errorText=""
  label=""
  onChange={[Function]}
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
  >
    <div
      className="css-1vjh8yv "
    >
      <Placeholder
        placeholder=""
        visible={false}
      >
        <div
          className="css-oc0mp css-1jyyyen"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </Placeholder>
      <Label
        hasErrorMessage={false}
        htmlFor="none"
        isFloating={true}
        isFocused={false}
        label=""
      >
        <label
          className="css-1nn9zl4 css-16msjt6 css-1fekhao"
          htmlFor="none"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </label>
      </Label>
      <div
        className="css-zbxrv7"
      >
        <RadioItem
          active={false}
          key=".0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-1cqgl9p"
            htmlFor="foo0.4545178122079825"
          >
            <RadioUnchecked>
              <Icon
                className=""
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              checked={false}
              className="css-gyrv08"
              id="foo0.4545178122079825"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1wx4qok"
              params={Object {}}
              string="foo"
            >
              <span
                className="css-1wx4qok"
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
        <RadioItem
          active={false}
          key=".1"
          label="bar"
          name="bar"
          onChange={[Function]}
        >
          <label
            className="css-1cqgl9p"
            htmlFor="bar0.5481175653818215"
          >
            <RadioUnchecked>
              <Icon
                className=""
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              checked={false}
              className="css-gyrv08"
              id="bar0.5481175653818215"
              name="bar"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1wx4qok"
              params={Object {}}
              string="bar"
            >
              <span
                className="css-1wx4qok"
              >
                bar
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
      <ErrorText
        className={null}
        errorText=""
      >
        <div
          className="css-hmgfge"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </ErrorText>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should make default as active 1`] = `
<RadioGroup
  default="foo"
  errorText=""
  label=""
  onChange={[Function]}
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
  >
    <div
      className="css-1vjh8yv "
    >
      <Placeholder
        placeholder=""
        visible={false}
      >
        <div
          className="css-oc0mp css-1jyyyen"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </Placeholder>
      <Label
        hasErrorMessage={false}
        htmlFor="none"
        isFloating={true}
        isFocused={false}
        label=""
      >
        <label
          className="css-1nn9zl4 css-16msjt6 css-1fekhao"
          htmlFor="none"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </label>
      </Label>
      <div
        className="css-zbxrv7"
      >
        <RadioItem
          active={true}
          key=".0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-1cqgl9p"
            htmlFor="foo0.532946595670658"
          >
            <RadioChecked
              className="css-1ncyhu"
            >
              <Icon
                className="css-1ncyhu"
                color={null}
                content="<path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-1ncyhu"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioChecked>
            <input
              checked={true}
              className="css-gyrv08"
              id="foo0.532946595670658"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1wx4qok"
              params={Object {}}
              string="foo"
            >
              <span
                className="css-1wx4qok"
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
      <ErrorText
        className={null}
        errorText=""
      >
        <div
          className="css-hmgfge"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </ErrorText>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render empty group 1`] = `
<RadioGroup
  default={null}
  errorText=""
  label=""
  onChange={[Function]}
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
  >
    <div
      className="css-1vjh8yv "
    >
      <Placeholder
        placeholder=""
        visible={false}
      >
        <div
          className="css-oc0mp css-1jyyyen"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </Placeholder>
      <Label
        hasErrorMessage={false}
        htmlFor="none"
        isFloating={true}
        isFocused={false}
        label=""
      >
        <label
          className="css-1nn9zl4 css-16msjt6 css-1fekhao"
          htmlFor="none"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </label>
      </Label>
      <div
        className="css-zbxrv7"
      />
      <ErrorText
        className={null}
        errorText=""
      >
        <div
          className="css-hmgfge"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </ErrorText>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render group with item 1`] = `
<RadioGroup
  default={null}
  errorText=""
  label=""
  onChange={[Function]}
>
  <FormElement
    className=""
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    placeholder=""
  >
    <div
      className="css-1vjh8yv "
    >
      <Placeholder
        placeholder=""
        visible={false}
      >
        <div
          className="css-oc0mp css-1jyyyen"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </Placeholder>
      <Label
        hasErrorMessage={false}
        htmlFor="none"
        isFloating={true}
        isFocused={false}
        label=""
      >
        <label
          className="css-1nn9zl4 css-16msjt6 css-1fekhao"
          htmlFor="none"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </label>
      </Label>
      <div
        className="css-zbxrv7"
      >
        <RadioItem
          active={false}
          key=".0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-1cqgl9p"
            htmlFor="foo0.3277093784514742"
          >
            <RadioUnchecked>
              <Icon
                className=""
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb "
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              checked={false}
              className="css-gyrv08"
              id="foo0.3277093784514742"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              className="css-1wx4qok"
              params={Object {}}
              string="foo"
            >
              <span
                className="css-1wx4qok"
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
      <ErrorText
        className={null}
        errorText=""
      >
        <div
          className="css-hmgfge"
        >
          <Translate
            className=""
            params={Object {}}
            string=""
          >
            <span
              className=""
            />
          </Translate>
        </div>
      </ErrorText>
    </div>
  </FormElement>
</RadioGroup>
`;
